--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,30 @@
 {
-	"name": "Geoguessr Solver",
-	"description": "Finds your current location in Geoguessr game",
-	"version": "1.0",
-	"manifest_version": 3,
-	"background": {
-		"service_worker": "background.js"
-	},
-	"permissions": [
-		"webRequest",
-		"tabs"
-	],
-	"content_scripts": [
-		{
-			"matches": ["*://*.geoguessr.com/*"],
-			"js": ["buttonContent.js"],
-			"run_at": "document_end"
-		}
-	],
-	"host_permissions": [		
-		"*://*.geoguessr.com/*",
-		"*://maps.googleapis.com/*"
-	]
+    "name": "Geoguessr Solver",
+    "description": "Finds your current location in Geoguessr game",
+    "version": "1.1",
+    "manifest_version": 3,
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": [
+        "webRequest",
+        "tabs",
+        "storage"
+    ],
+    "host_permissions": [
+        "*://*.geoguessr.com/*",
+        "*://maps.googleapis.com/*",
+        "*://nominatim.openstreetmap.org/*",
+        "*://maps.wikimedia.org/*"
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": ["map.html", "map.js", "leaflet.js", "leaflet.css"],
+            "matches": ["<all_urls>"]
+        }
+    ],
+    "action": {
+        "default_popup": "popup.html",
+	"default_icon": "icon.png"
+    }
 }
